src/objects/Visitor_Page_View__c.object
<CustomObject>
    <fields>
        <fullName>Pardot_Visitor_Activity__c</fullName>
        <label>Pardot Visitor Activity</label>
        <referenceTo>Pardot_Visitor_Activity__c</referenceTo>
        <relationshipLabel>Visitor Page Views</relationshipLabel>
        <relationshipName>Visitor_Page_Views</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Visit_Created_At__c</fullName>
        <label>Visit Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Visit_Title__c</fullName>
        <label>Visit Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Url__c</fullName>
        <label>Visit Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Visitor_Page_View_Id__c</fullName>
        <externalId>true</externalId>
        <label>Visitor Page View Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Visitor Page View</label>
    <nameField>
        <label>Visitor Page View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visitor Page Views</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>